external-crates/move/crates/move-compiler/tests/move_2024/parser/mut_field_pun_invalid_assign.exp
warning[W09003]: unused assignment
  ┌─ tests/move_2024/parser/mut_field_pun_invalid_assign.move:5:13
  │
5 │         let f = 0;
  │             ^ Unused assignment for variable 'f'. Consider removing, replacing with '_', or prefixing with '_' (e.g., '_f')
  │
  = This warning can be suppressed with '#[allow(unused_assignment)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E01002]: unexpected token
  ┌─ tests/move_2024/parser/mut_field_pun_invalid_assign.move:6:13
  │
6 │         S { mut f } = s1;
  │             ^^^
  │             │
  │             Unexpected 'mut'
  │             Expected an identifier

error[E01002]: unexpected token
  ┌─ tests/move_2024/parser/mut_field_pun_invalid_assign.move:6:21
  │
6 │         S { mut f } = s1;
  │                     ^
  │                     │
  │                     Unexpected '='
  │                     Expected a module member: 'spec', 'use', 'friend', 'const', 'fun', or 'struct'

